[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-decision-env"
version = "1.0.0"
description = "AI Clinical Decision Support Environment - OpenEnv compliant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clinical AI Research Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["openenv", "healthcare", "clinical-decision", "ai", "reinforcement-learning"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
ui = ["gradio>=4.0.0"]
dev = ["pytest", "black", "ruff"]

[project.scripts]
clinical-decision-server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Himanshugoyal19/clinical-decision-env"
Repository = "https://github.com/Himanshugoyal04/clinical-decision-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]

[tool.setuptools.package-data]
"app.cases" = ["*.json"]
